syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message AddWorkflowRequest {
	optional string namespace = 1;
	optional bool active = 2;
	optional bytes workflow = 3;
	optional string logToEvents = 4;
}

message AddWorkflowResponse {
	optional string uid = 1;
	optional string id = 2;
	optional int32 revision = 3;
	optional bool active = 4;
	optional google.protobuf.Timestamp createdAt = 5;
}