syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetWorkflowByUidRequest {
	optional string uid = 1;
}

message GetWorkflowByUidResponse {
	optional string uid = 1;
	optional string id = 2;
	optional int32 revision = 3;
	optional bool active = 4;
	optional google.protobuf.Timestamp createdAt = 5;
	optional string description = 6;
	optional bytes workflow = 7;
	optional string logToEvents = 8;
}