syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message InvokeWorkflowRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional bytes input = 3;
	optional bool wait = 4;
}

message InvokeWorkflowResponse {
	optional string instanceId = 1;
	optional bytes output = 2;
}
